test/corpus/main.txt
=====
No TODO
=====
None
-----

(program)


=====
Simple TODO
=====
TODO: Fix this
-----

(program (todo (todo_token) (todo_body)))


=====
Multiple TODO
=====
TODO: Fix this
TODO: And this
TODO: And this
-----

(program
  (todo (todo_token) (todo_body))
  (todo (todo_token) (todo_body))
  (todo (todo_token) (todo_body)))


=====
Not TODO
=====
helloTODO: this
-----

(program)


=====
Also not TODO
=====
hello FOO: this
-----

(program)


=====
Is TODO
=====
hello TODO: this
-----

(program (todo (todo_token) (todo_body)))


=====
Ends with TODO
=====
foo TODO
-----

(program (todo (todo_token)))


=====
Same line TODO
=====
fOo TODO this TODO That
-----

(program (todo (todo_token) (todo_body)))


=====
Valid initial characters TODO
=====
@TODO
$TODO
 TODO
-TODO
-----

(program
  (todo (todo_token))
  (todo (todo_token))
  (todo (todo_token))
  (todo (todo_token)))


=====
Not valid initial characters TODO
=====
FTODO
xTODO
1TODO
_TODO
-----

(program)


=====
Not valid trailing characters TODO
=====
TODOF
TODO1
TODO_
-----

(program)
